Archive2/98/e00e4b852e747c/output
main.cpp: In member function 'bool& Test::operator[](int)':
main.cpp:9:57: error: invalid types 'void[int]' for array subscript
     bool& operator[](int idx) { return m_data.data()[idx]; }
                                                         ^
main.cpp:9:60: warning: control reaches end of non-void function [-Wreturn-type]
     bool& operator[](int idx) { return m_data.data()[idx]; }
                                                            ^
